fix: fix button with arrow alignment

--- a/theme/less/components/buttons.less
+++ b/theme/less/components/buttons.less
@@ -220,7 +220,7 @@ There are `.fr-btn--icon-left` and `fr-btn--icon-right` to add spacing around th
             content: " ";
             position: relative;
             display: inline-block;
-            vertical-align: text-top;
+            vertical-align: middle;
 
             margin-left: 8px;
             left: 0;
